--- a/build.gradle
+++ b/build.gradle
@@ -8,6 +8,10 @@ group = 'com.example'
 version = '0.0.1-SNAPSHOT'
 sourceCompatibility = '17'
 
+springBoot {
+  mainClass = 'com.example.DemoApplication'
+}
+
 repositories {
   mavenCentral()
 }
